test/fail/M0029.mo
type Fo = ();
let _ : Foo = ();
